; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_s_lock.c_s_lock.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_s_lock.c_s_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @s_lock(i32* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_5__, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i8*, i8** %8, align 8
  %13 = call i32 @init_spin_delay(%struct.TYPE_5__* %9, i8* %10, i32 %11, i8* %12)
  br label %14

14:                                               ; preds = %18, %4
  %15 = load i32*, i32** %5, align 8
  %16 = call i64 @TAS_SPIN(i32* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %14
  %19 = call i32 @perform_spin_delay(%struct.TYPE_5__* %9)
  br label %14

20:                                               ; preds = %14
  %21 = call i32 @finish_spin_delay(%struct.TYPE_5__* %9)
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  ret i32 %23
}

declare dso_local i32 @init_spin_delay(%struct.TYPE_5__*, i8*, i32, i8*) #1

declare dso_local i64 @TAS_SPIN(i32*) #1

declare dso_local i32 @perform_spin_delay(%struct.TYPE_5__*) #1

declare dso_local i32 @finish_spin_delay(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
